[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "siglus-ssu"
version = "0.1.7"
description = "SiglusEngine scene script utility for compiling/extracting scripts and data (Rust-accelerated)."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Jirehlov" }
]
dependencies = []

[project.scripts]
siglus-ssu = "siglus_scene_script_utility.__main__:main"

[dependency-groups]
dev = [
    "maturin>=1.12.4",
    "ruff>=0.15.2",
    "pillow>=12.1.1",
]

[tool.maturin]
python-source = "src"
module-name = "siglus_scene_script_utility.native_accel"
manifest-path = "src/siglus_scene_script_utility/rust/Cargo.toml"
sdist-generator = "git"
exclude = ["src/siglus_scene_script_utility/const.py"]
