[package]
name = "siglus_ssu_native"
version = "0.4.0"
edition = "2024"
license = "Unlicense OR 0BSD"

[lib]
name = "siglus_ssu_native"
crate-type = ["cdylib"]

[dependencies]
encoding_rs = "0.8"
pyo3 = { version = "0.29", features = ["extension-module"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "unwind"
strip = true
